--- a/exp.ipynb
+++ b/exp.ipynb
@@ -243,6 +243,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install dotenv-python"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -274,10 +283,14 @@
    ],
    "source": [
     "from opensearchpy import OpenSearch\n",
+    "from dotenv import load_dotenv\n",
+    "from os import getenv\n",
+    "\n",
+    "load_dotenv()\n",
     "\n",
     "host = 'localhost'\n",
     "port = 9200\n",
-    "auth = ('admin', 'TestPass123!') # For testing only. Don't store credentials in code.\n",
+    "auth = ('admin', getenv(\"OPENSEARCH_INITIAL_ADMIN_PASSWORD\")) # For testing only. Don't store credentials in code.\n",
     "\n",
     "client = OpenSearch(\n",
     "    hosts = [{'host': host, 'port': port}],\n",
