--- a/exp.ipynb
+++ b/exp.ipynb
@@ -290,7 +290,7 @@
     "\n",
     "host = 'localhost'\n",
     "port = 9200\n",
-    "auth = ('admin', getenv(\"OPENSEARCH_INITIAL_ADMIN_PASSWORD\")) # For testing only. Don't store credentials in code.\n",
+    "auth = ('admin', getenv(\"OPENSEARCH_INITIAL_ADMIN_PASSWORD\"))\n",
     "\n",
     "client = OpenSearch(\n",
     "    hosts = [{'host': host, 'port': port}],\n",
@@ -15697,12 +15697,11 @@
     }
    ],
    "source": [
-    "#Creating and defining the index\n",
     "index_name = 'movies'\n",
     "index_body = {\n",
     "    \"settings\": {\n",
     "        \"index\": {\n",
-    "            \"knn\": True  # Enable k-NN for this index\n",
+    "            \"knn\": True \n",
     "        }\n",
     "    },\n",
     "    \"mappings\": {\n",
@@ -15760,8 +15759,6 @@
    ],
    "source": [
     "# Function to delete the index\n",
-    "\n",
-    "# Check if the index exists and delete it if it does\n",
     "def del_index(index_name):\n",
     "    if client.indices.exists(index=index_name):\n",
     "        client.indices.delete(index=index_name)\n",
@@ -15954,7 +15951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15974,7 +15971,6 @@
     "def bulk_update_embeddings(index_name, movies):\n",
     "    actions = []\n",
     "    for movie in movies:\n",
-    "        # Generate an embedding for the movie description\n",
     "        embedding = get_embedding(f\"\"\"\n",
     "            Name:{movie[\"Series_Title\"]}\n",
     "            Description:{movie[\"Overview\"]}\n",
@@ -15983,11 +15979,10 @@
     "            Stars:{movie[\"Star1\"]}, {movie[\"Star2\"]}, {movie[\"Star3\"]}, {movie[\"Star4\"]}\n",
     "        \"\"\")\n",
     "\n",
-    "        # Prepare the update action\n",
     "        action = {\n",
     "            \"_op_type\": \"update\",\n",
     "            \"_index\": index_name,\n",
-    "            \"_id\": movie[\"id\"],  # Ensure this ID matches the one used in indexing\n",
+    "            \"_id\": movie[\"id\"], \n",
     "            \"doc\": {\"embedding\": embedding}\n",
     "        }\n",
     "        actions.append(action)\n",
